k8s/base/differ-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: differ-api
spec:
  selector:
    app: differ-api
  ports:
  - port: 80
    targetPort: 8000
    name: http
  type: ClusterIP
