k8s/base/differ-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: differ-ui
spec:
  selector:
    app: differ-ui
  ports:
  - port: 80
    targetPort: 80
    name: http
  type: ClusterIP
