k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: differ-redis
spec:
  selector:
    app: differ-redis
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
  type: ClusterIP
