k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: differ-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: differ.localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: differ-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: differ-ui
                port:
                  number: 80
